[build-system]
requires = ["setuptools~=69.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "bible_search"
version = "0.0.1"
authors = [
  { name="Samuel Howard" },
]
description = "A Python package for searching multiple versions of the Bible."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["bible search", "bible_search", "esv", "kjv", "asv", "bible_api", "bible"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = ["Brotli"]

[project.urls]
"Homepage" = "https://github.com/samhaswon/bible_search"
"Bug Tracker" = "https://github.com/samhaswon/bible_search/issues"