[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_bible_search"
version = "2.1.3"
authors = [
  { name="Samuel Howard" },
]
description = "A Python package for searching multiple versions of the Bible."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["bible search",
    "bible_search",
    "esv",
    "kjv",
    "asv",
    "bible_api",
    "bible",
    "multi_bible_search",
    "spanish_bible",
    "spanish_bible_search"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/samhaswon/bible_search"
"Bug Tracker" = "https://github.com/samhaswon/bible_search/issues"
