[metadata]
license_files = LICENSE

[options]
# ...
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
* = *.c, *.h  # Include C source files and headers in the package
multi_bible_search =
    data/*.pbz2

[build_ext]
inplace = True

[ext_modules]
sources =
    ctranslate.c